--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -217,6 +217,7 @@
     <DCCReference Include="u_MapCalibrationWorldFiles.pas" />
     <DCCReference Include="u_MapChangeMessage.pas" />
     <DCCReference Include="u_MapCombineThreadBase.pas" />
+    <DCCReference Include="u_MapCombineThreadBMP.pas" />
     <DCCReference Include="u_MapFillingLayer.pas" />
     <DCCReference Include="u_MapGPSLayer.pas" />
     <DCCReference Include="u_MapLayerBasic.pas" />
