--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -218,6 +218,7 @@
     <DCCReference Include="u_MapChangeMessage.pas" />
     <DCCReference Include="u_MapCombineThreadBase.pas" />
     <DCCReference Include="u_MapCombineThreadBMP.pas" />
+    <DCCReference Include="u_MapCombineThreadECW.pas" />
     <DCCReference Include="u_MapFillingLayer.pas" />
     <DCCReference Include="u_MapGPSLayer.pas" />
     <DCCReference Include="u_MapLayerBasic.pas" />
