Новый базовый класс для всех обработок региона.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -267,6 +267,9 @@
     <DCCReference Include="u_ProxySettingsFromTInetConnect.pas" />
     <DCCReference Include="u_SearchResultPresenterStuped.pas" />
     <DCCReference Include="u_SelectionLayer.pas" />
+    <DCCReference Include="u_ThreadExportAbstract.pas" />
+    <DCCReference Include="u_ThreadExportToZip.pas" />
+    <DCCReference Include="u_ThreadRegionProcessAbstract.pas" />
     <DCCReference Include="u_TileCacheSimpleGlobal.pas" />
     <DCCReference Include="u_TileDownloaderBase.pas" />
     <DCCReference Include="u_TileDownloaderBaseFactory.pas" />
