--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -169,7 +169,6 @@
     <DCCReference Include="UShortcutEditor.pas">
       <Form>FShortcutChange</Form>
     </DCCReference>
-    <DCCReference Include="UThreadExportIPhone.pas" />
     <DCCReference Include="UThreadExportKML.pas" />
     <DCCReference Include="UThreadExportYaMaps.pas" />
     <DCCReference Include="UTimeZones.pas" />
@@ -267,6 +266,7 @@
     <DCCReference Include="u_SearchResultPresenterStuped.pas" />
     <DCCReference Include="u_SelectionLayer.pas" />
     <DCCReference Include="u_ThreadExportAbstract.pas" />
+    <DCCReference Include="u_ThreadExportIPhone.pas" />
     <DCCReference Include="u_ThreadExportToFileSystem.pas" />
     <DCCReference Include="u_ThreadExportToZip.pas" />
     <DCCReference Include="u_ThreadRegionProcessAbstract.pas" />
