--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -169,7 +169,6 @@
     <DCCReference Include="UShortcutEditor.pas">
       <Form>FShortcutChange</Form>
     </DCCReference>
-    <DCCReference Include="UThreadExportYaMaps.pas" />
     <DCCReference Include="UTimeZones.pas" />
     <DCCReference Include="UTrAllLoadMap.pas" />
     <DCCReference Include="UYaMobile.pas" />
@@ -269,6 +268,7 @@
     <DCCReference Include="u_ThreadExportKML.pas" />
     <DCCReference Include="u_ThreadExportToFileSystem.pas" />
     <DCCReference Include="u_ThreadExportToZip.pas" />
+    <DCCReference Include="u_ThreadExportYaMaps.pas" />
     <DCCReference Include="u_ThreadRegionProcessAbstract.pas" />
     <DCCReference Include="u_TileCacheSimpleGlobal.pas" />
     <DCCReference Include="u_TileDownloaderBase.pas" />
