--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -215,10 +215,6 @@
     <DCCReference Include="u_MapCalibrationTab.pas" />
     <DCCReference Include="u_MapCalibrationWorldFiles.pas" />
     <DCCReference Include="u_MapChangeMessage.pas" />
-    <DCCReference Include="u_MapCombineThreadBMP.pas" />
-    <DCCReference Include="u_MapCombineThreadECW.pas" />
-    <DCCReference Include="u_MapCombineThreadJPG.pas" />
-    <DCCReference Include="u_MapCombineThreadKMZ.pas" />
     <DCCReference Include="u_MapFillingLayer.pas" />
     <DCCReference Include="u_MapGPSLayer.pas" />
     <DCCReference Include="u_MapLayerBasic.pas" />
@@ -269,6 +265,10 @@
     <DCCReference Include="u_ThreadExportYaMaps.pas" />
     <DCCReference Include="u_ThreadGenPrevZoom.pas" />
     <DCCReference Include="u_ThreadMapCombineBase.pas" />
+    <DCCReference Include="u_ThreadMapCombineBMP.pas" />
+    <DCCReference Include="u_ThreadMapCombineECW.pas" />
+    <DCCReference Include="u_ThreadMapCombineJPG.pas" />
+    <DCCReference Include="u_ThreadMapCombineKMZ.pas" />
     <DCCReference Include="u_ThreadRegionProcessAbstract.pas" />
     <DCCReference Include="u_TileCacheSimpleGlobal.pas" />
     <DCCReference Include="u_TileDownloaderBase.pas" />
