--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -284,6 +284,9 @@
     <DCCReference Include="u_TileFileNameSAS.pas" />
     <DCCReference Include="u_TileIteratorAbstract.pas" />
     <DCCReference Include="u_TileIteratorStuped.pas" />
+    <DCCReference Include="u_TileStorageAbstract.pas" />
+    <DCCReference Include="u_TileStorageFileSystem.pas" />
+    <DCCReference Include="u_TileStorageGEStuped.pas" />
     <DCCReference Include="u_UrlGenerator.pas" />
     <DCCReference Include="u_WindowLayerBasic.pas" />
   </ItemGroup>
