--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -70,6 +70,10 @@
       <Form>frExportYaMaps</Form>
       <DesignClass>TFrame</DesignClass>
     </DCCReference>
+    <DCCReference Include="fr_TilesCopy.pas">
+      <DesignClass>TFrame</DesignClass>
+      <Form>frTilesCopy</Form>
+    </DCCReference>
     <DCCReference Include="fr_TilesDelete.pas">
       <Form>frTilesDelete</Form>
       <DesignClass>TFrame</DesignClass>
@@ -288,6 +292,7 @@
     <DCCReference Include="u_PoolElement.pas" />
     <DCCReference Include="u_PoolOfObjectsSimple.pas" />
     <DCCReference Include="u_PosChangeMessage.pas" />
+    <DCCReference Include="u_ProviderTilesCopy.pas" />
     <DCCReference Include="u_ProviderTilesDelete.pas" />
     <DCCReference Include="u_ProviderTilesGenPrev.pas" />
     <DCCReference Include="u_ProxySettingsFromTInetConnect.pas" />
