--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -303,6 +303,7 @@
     <DCCReference Include="u_ProviderMapCombine.pas" />
     <DCCReference Include="u_ProviderTilesCopy.pas" />
     <DCCReference Include="u_ProviderTilesDelete.pas" />
+    <DCCReference Include="u_ProviderTilesDownload.pas" />
     <DCCReference Include="u_ProviderTilesGenPrev.pas" />
     <DCCReference Include="u_ProxySettingsFromTInetConnect.pas" />
     <DCCReference Include="u_SearchResultPresenterStuped.pas" />
