--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -99,6 +99,7 @@
     <DCCReference Include="i_IBitmapTypeExtManager.pas" />
     <DCCReference Include="i_IConfigDataProvider.pas" />
     <DCCReference Include="i_ICoordConverter.pas" />
+    <DCCReference Include="i_IGPSRecorder.pas" />
     <DCCReference Include="i_IHybrChangeMessage.pas" />
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
     <DCCReference Include="i_IListOfObjectsWithTTL.pas" />
