--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -247,6 +247,7 @@
     <DCCReference Include="u_GETexture.pas" />
     <DCCReference Include="u_GlobalCahceConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
+    <DCCReference Include="u_GPSRecorderStuped.pas" />
     <DCCReference Include="u_HybrChangeMessage.pas" />
     <DCCReference Include="u_KmlInfoSimple.pas" />
     <DCCReference Include="u_KmlInfoSimpleParser.pas" />
