Разделил форму редактирования одного хоткея и логику редактора хоткеев по разным юнитам.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -309,6 +309,7 @@
     <DCCReference Include="u_ProxySettingsFromTInetConnect.pas" />
     <DCCReference Include="u_SearchResultPresenterStuped.pas" />
     <DCCReference Include="u_SelectionLayer.pas" />
+    <DCCReference Include="u_ShortcutManager.pas" />
     <DCCReference Include="u_ThreadDeleteTiles.pas" />
     <DCCReference Include="u_ThreadDownloadTiles.pas" />
     <DCCReference Include="u_ThreadExportAbstract.pas" />
