Доделывание нового интерфейса и его реализация для ini файла.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -264,6 +264,8 @@
     <DCCReference Include="u_ConfigDataProviderByIniFile.pas" />
     <DCCReference Include="u_ConfigDataProviderByIniFileSection.pas" />
     <DCCReference Include="u_ConfigDataProviderByKaZip.pas" />
+    <DCCReference Include="u_ConfigDataWriteProviderByIniFile.pas" />
+    <DCCReference Include="u_ConfigDataWriteProviderByIniFileSection.pas" />
     <DCCReference Include="u_CoordConverterAbstract.pas" />
     <DCCReference Include="u_CoordConverterBasic.pas" />
     <DCCReference Include="u_CoordConverterMercatorOnEllipsoid.pas" />
