Класс со списком слоев окна.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -365,5 +365,6 @@
     <DCCReference Include="u_TileStorageGEStuped.pas" />
     <DCCReference Include="u_UrlGenerator.pas" />
     <DCCReference Include="u_WindowLayerBasic.pas" />
+    <DCCReference Include="u_WindowLayerBasicList.pas" />
   </ItemGroup>
 </Project>
