--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -177,11 +177,15 @@
     <DCCReference Include="src\ECWwriter.pas" />
     <DCCReference Include="src\gnugettext.pas" />
     <DCCReference Include="src\ijl.pas" />
+    <DCCReference Include="src\i_IFileNameIterator.pas" />
     <DCCReference Include="src\i_IGUIDList.pas" />
     <DCCReference Include="src\i_JclNotify.pas" />
     <DCCReference Include="src\KAZip.pas" />
     <DCCReference Include="src\Langs.pas" />
     <DCCReference Include="src\SwinHttp.pas" />
+    <DCCReference Include="src\u_FileNameIteratorFolderWithSubfolders.pas" />
+    <DCCReference Include="src\u_FileNameIteratorInFolderByMask.pas" />
+    <DCCReference Include="src\u_FileNameIteratorInFolderByMaskList.pas" />
     <DCCReference Include="src\u_GUIDInterfaceList.pas" />
     <DCCReference Include="src\u_GUIDList.pas" />
     <DCCReference Include="src\u_GUIDObjectList.pas" />
