--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -186,6 +186,7 @@
     <DCCReference Include="src\u_FileNameIteratorFolderWithSubfolders.pas" />
     <DCCReference Include="src\u_FileNameIteratorInFolderByMask.pas" />
     <DCCReference Include="src\u_FileNameIteratorInFolderByMaskList.pas" />
+    <DCCReference Include="src\u_FoldersIteratorRecursiveByLevels.pas" />
     <DCCReference Include="src\u_GUIDInterfaceList.pas" />
     <DCCReference Include="src\u_GUIDList.pas" />
     <DCCReference Include="src\u_GUIDObjectList.pas" />
