Обновление списка параметров извлечения строк для перевода

--- a/ggexclude.cfg
+++ b/ggexclude.cfg
@@ -15,6 +15,7 @@ TTBXLabel.Font.Name
 TFrame.Font.Name
 TForm.Font.Name
 TColorBox.Font.Name
+TCheckBox.Font.Name
 TListBox.Font.Name
 TFShortcutChange.Font.Name
 TFSettings.Font.Name
