--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -291,6 +291,7 @@
     <DCCReference Include="u_GETexture.pas" />
     <DCCReference Include="u_GlobalCahceConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
+    <DCCReference Include="u_GPSPositionByZylGPS.pas" />
     <DCCReference Include="u_GPSPositionStatic.pas" />
     <DCCReference Include="u_GPSPositionUpdatable.pas" />
     <DCCReference Include="u_GPSRecorderStuped.pas" />
