Переименовал один из новых юнитов

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -291,9 +291,9 @@
     <DCCReference Include="u_GETexture.pas" />
     <DCCReference Include="u_GlobalCahceConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
+    <DCCReference Include="u_GPSModuleAbstract.pas" />
     <DCCReference Include="u_GPSPositionByZylGPS.pas" />
     <DCCReference Include="u_GPSPositionStatic.pas" />
-    <DCCReference Include="u_GPSPositionUpdatable.pas" />
     <DCCReference Include="u_GPSRecorderStuped.pas" />
     <DCCReference Include="u_GPSSatelliteInfo.pas" />
     <DCCReference Include="u_GPSSatellitesInView.pas" />
