--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -76,6 +76,7 @@
     <DCCReference Include="i_IConfigDataProvider.pas" />
     <DCCReference Include="i_IConfigDataWriteProvider.pas" />
     <DCCReference Include="i_ICoordConverter.pas" />
+    <DCCReference Include="i_IGPSModule.pas" />
     <DCCReference Include="i_IGPSRecorder.pas" />
     <DCCReference Include="i_IHybrChangeMessage.pas" />
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
