Переименовал юнит и добавил еще парочку.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -77,6 +77,7 @@
     <DCCReference Include="i_IConfigDataWriteProvider.pas" />
     <DCCReference Include="i_ICoordConverter.pas" />
     <DCCReference Include="i_IGPSModule.pas" />
+    <DCCReference Include="i_IGPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="i_IGPSRecorder.pas" />
     <DCCReference Include="i_IHybrChangeMessage.pas" />
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
@@ -293,7 +294,8 @@
     <DCCReference Include="u_GlobalCahceConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
     <DCCReference Include="u_GPSModuleAbstract.pas" />
-    <DCCReference Include="u_GPSPositionByZylGPS.pas" />
+    <DCCReference Include="u_GPSModuleByCOMPortSettings.pas" />
+    <DCCReference Include="u_GPSModuleByZylGPS.pas" />
     <DCCReference Include="u_GPSPositionStatic.pas" />
     <DCCReference Include="u_GPSRecorderStuped.pas" />
     <DCCReference Include="u_GPSSatelliteInfo.pas" />
